upgrade to sdk 252

--- a/src/main/html/change-notes.html
+++ b/src/main/html/change-notes.html
@@ -1,10 +1,11 @@
 Versions:
 <ul>
-    <li>All Intellij products support: 1.0.3</li>
+    <li>All Intellij products support: 1.1.0</li>
 </ul>
 <br>
 Plugin updates:
 <ul>
+    <li><b>1.1.0</b> <em>(2025-05-16)</em> - upgrade sdk</li>
     <li><b>1.0.3</b> <em>(2025-03-24)</em> - upgrade sdk</li>
     <li><b>1.0.2</b> <em>(2025-01-16)</em> - upgrade sdk</li>
     <li><b>1.0.1</b> <em>(2025-01-13)</em> - initial release
